unpackaged/main/default/objects/Opportunity/fields/Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Holder_Name__c</fullName>
    <label>Holder Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>