unpackaged/main/default/objects/Opportunity/fields/IA_Notes__c.field-meta.xml
<CustomField>
    <fullName>IA_Notes__c</fullName>
    <label>IA Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>