unpackaged/main/default/objects/Opportunity/fields/In_an_Installment_Agreement__c.field-meta.xml
<CustomField>
    <fullName>In_an_Installment_Agreement__c</fullName>
    <label>In an Installment Agreement?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>