unpackaged/main/default/objects/Opportunity/fields/Internal_Payment_Note__c.field-meta.xml
<CustomField>
    <fullName>Internal_Payment_Note__c</fullName>
    <label>Internal Payment Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>