unpackaged/main/default/objects/Opportunity/fields/IRS_Revenue_Officer_Indicator__c.field-meta.xml
<CustomField>
    <fullName>IRS_Revenue_Officer_Indicator__c</fullName>
    <formula>IMAGE( 
CASE(IRS_Revenue_Officer_on_Case__c,  
&quot;Yes&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;/s.gif&quot;), 
&quot;IRS Revenue Officer Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IRS Revenue Officer Indicator</label>
    <type>Text</type>
</CustomField>