unpackaged/main/default/objects/Opportunity/fields/IRS_Revenue_Officer_on_Case__c.field-meta.xml
<CustomField>
    <fullName>IRS_Revenue_Officer_on_Case__c</fullName>
    <label>IRS Revenue Officer on Case?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>