unpackaged/main/default/objects/Opportunity/fields/Is_account_Blank__c.field-meta.xml
<CustomField>
    <fullName>Is_account_Blank__c</fullName>
    <formula>NOT(ISBLANK( Account.Id ))</formula>
    <label>Is account Blank?</label>
    <type>Checkbox</type>
</CustomField>