unpackaged/main/default/objects/Opportunity/fields/ITR_Id__c.field-meta.xml
<CustomField>
    <fullName>ITR_Id__c</fullName>
    <formula>Account.ITR_Id_formula__c</formula>
    <label>ITR ID</label>
    <type>Text</type>
</CustomField>