unpackaged/main/default/objects/Opportunity/fields/ITR_Id_Backend__c.field-meta.xml
<CustomField>
    <fullName>ITR_Id_Backend__c</fullName>
    <externalId>true</externalId>
    <label>ITR Id Backend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>