unpackaged/main/default/objects/Opportunity/fields/ITR_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>ITR_Payment_Method__c</fullName>
    <label>ITR Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>Full Pay ACH</fullName>
                <label>Full Pay - ACH</label>
            </value>
            <value>
                <fullName>Full Pay - Card</fullName>
            </value>
            <value>
                <fullName>Full Pay - Other</fullName>
            </value>
            <value>
                <fullName>Complimentary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>