unpackaged/main/default/objects/Opportunity/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>Lead Source mirror from Account</description>
    <formula>Text(Account.PersonContact.LeadSource)</formula>
    <label>Lead Source</label>
    <type>Text</type>
</CustomField>