unpackaged/main/default/objects/Opportunity/fields/Litigator__c.field-meta.xml
<CustomField>
    <fullName>Litigator__c</fullName>
    <formula>TEXT(Account.Litigator__c)</formula>
    <label>Litigator</label>
    <type>Text</type>
</CustomField>