unpackaged/main/default/objects/Opportunity/fields/Loan_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purchased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Purchased</label>
    <type>Checkbox</type>
</CustomField>