unpackaged/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>2nd Trade Nurture Priority</fullName>
            </value>
            <value>
                <fullName>2nd Trade Nurture</fullName>
            </value>
            <value>
                <fullName>Bad or Wrong Number</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Cancelled within 3 days of signing TSA</fullName>
            </value>
            <value>
                <fullName>Cannot Assist</fullName>
            </value>
            <value>
                <fullName>Cant Help</fullName>
            </value>
            <value>
                <fullName>Cant Help Currently in IA or CNC</fullName>
            </value>
            <value>
                <fullName>Cant Help Eligible for Bookeeping and Tax Prep</fullName>
            </value>
            <value>
                <fullName>Cant Help Eligible for Tax Prep</fullName>
            </value>
            <value>
                <fullName>Cant Help Eligible for Yearly Tax Prep</fullName>
            </value>
            <value>
                <fullName>Child Support</fullName>
            </value>
            <value>
                <fullName>Client Request</fullName>
            </value>
            <value>
                <fullName>Credit Card Debt</fullName>
            </value>
            <value>
                <fullName>Currently in IA or CNC</fullName>
            </value>
            <value>
                <fullName>Debt Too Low</fullName>
            </value>
            <value>
                <fullName>Debt Too Small</fullName>
            </value>
            <value>
                <fullName>Disputed Payments</fullName>
            </value>
            <value>
                <fullName>Do Not Call</fullName>
            </value>
            <value>
                <fullName>DNR</fullName>
            </value>
            <value>
                <fullName>Financing Recourse</fullName>
            </value>
            <value>
                <fullName>IN LEVY</fullName>
            </value>
            <value>
                <fullName>IRS Inquiry</fullName>
            </value>
            <value>
                <fullName>Lost: DNR</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Non Payment</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Phone Solicitations</fullName>
            </value>
            <value>
                <fullName>Pitched Nurture</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>