unpackaged/main/default/objects/Opportunity/fields/Negotiations_Case_Created__c.field-meta.xml
<CustomField>
    <fullName>Negotiations_Case_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to prevent negotiations only case duplicates.</description>
    <label>Negotiations Case Created?</label>
    <type>Checkbox</type>
</CustomField>