unpackaged/main/default/objects/Opportunity/fields/Next_Calendar_Event__c.field-meta.xml
<CustomField>
    <fullName>Next_Calendar_Event__c</fullName>
    <description>Only displays information if the last calendar event is in the future</description>
    <formula>IF(
    Last_Calendar_Event__c &lt; NOW(),
    NULL,
    Last_Calendar_Event__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays a date if the latest event is in the future. Otherwise displays a blank value.</inlineHelpText>
    <label>Next Calendar Event</label>
    <type>DateTime</type>
</CustomField>