unpackaged/main/default/objects/Opportunity/fields/Next_Calendar_Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Calendar_Event_Time__c</fullName>
    <formula>LEFT(TEXT( TIMEVALUE(Next_Calendar_Event__c)-18000000 ),5)</formula>
    <label>Next Calendar Event Time</label>
    <type>Text</type>
</CustomField>