unpackaged/main/default/objects/Opportunity/fields/Offered_Client_Financing__c.field-meta.xml
<CustomField>
    <fullName>Offered_Client_Financing__c</fullName>
    <label>Offered Client Financing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>