unpackaged/main/default/objects/Opportunity/fields/Opportunity_Product_Values__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_Values__c</fullName>
    <label>Opportunity Product Values</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>