unpackaged/main/default/objects/Opportunity/fields/Payment_Details__c.field-meta.xml
<CustomField>
    <fullName>Payment_Details__c</fullName>
    <label>Payment Details</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>