unpackaged/main/default/objects/Opportunity/fields/Payment_Recurrency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Recurrency__c</fullName>
    <label>Payment Recurrency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Split</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>