unpackaged/main/default/objects/Opportunity/fields/Payment_Schedule_Values__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_Values__c</fullName>
    <label>Payment Schedule Values</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>