unpackaged/main/default/objects/Opportunity/fields/Payment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Start_Date__c</fullName>
    <label>Payment Start Date</label>
    <type>Date</type>
</CustomField>