unpackaged/main/default/objects/Opportunity/fields/payment_Start_Date_v2__c.field-meta.xml
<CustomField>
    <fullName>payment_Start_Date_v2__c</fullName>
    <formula>TEXT(MONTH( Payment_Start_Date__c )) &amp; &quot;/&quot; &amp; TEXT(DAY( Payment_Start_Date__c )) &amp; &quot;/&quot; &amp; TEXT(YEAR( Payment_Start_Date__c ))</formula>
    <label>payment_Start_Date_v2</label>
    <type>Text</type>
</CustomField>