unpackaged/main/default/objects/Opportunity/fields/Payment_Treshold__c.field-meta.xml
<CustomField>
    <fullName>Payment_Treshold__c</fullName>
    <inlineHelpText>Payment threshold (%) required for this client case to be activated.</inlineHelpText>
    <label>Payment Threshold for Activation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Down Payment</fullName>
            </value>
            <value>
                <fullName>30%</fullName>
            </value>
            <value>
                <fullName>75%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>