unpackaged/main/default/objects/Opportunity/fields/PB1_Former_Client__c.field-meta.xml
<CustomField>
    <fullName>PB1_Former_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PB1 Former Client</label>
    <type>Checkbox</type>
</CustomField>