unpackaged/main/default/objects/Opportunity/fields/Person_Account_Last_SMS_Received__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Last_SMS_Received__c</fullName>
    <formula>Account.Last_SMS_Received_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last SMS Received</label>
    <type>Date</type>
</CustomField>