unpackaged/main/default/objects/Opportunity/fields/Processed_Payment__c.field-meta.xml
<CustomField>
    <fullName>Processed_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed Payment?</label>
    <type>Checkbox</type>
</CustomField>