unpackaged/main/default/objects/Opportunity/fields/Product_Discount__c.field-meta.xml
<CustomField>
    <fullName>Product_Discount__c</fullName>
    <label>Product Discount</label>
    <summarizedField>OpportunityLineItem.Discount</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>