unpackaged/main/default/objects/Opportunity/fields/Received_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Received_Agreements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received Agreements?</label>
    <type>Checkbox</type>
</CustomField>