unpackaged/main/default/objects/Opportunity/fields/Received_POAs__c.field-meta.xml
<CustomField>
    <fullName>Received_POAs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received POAs?</label>
    <type>Checkbox</type>
</CustomField>