unpackaged/main/default/objects/Opportunity/fields/Recurring_Tax_Preparation_Tie__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Tax_Preparation_Tie__c</fullName>
    <label>-Recurring Tax Preparation Tie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>