unpackaged/main/default/objects/Opportunity/fields/Remaining_Representation_Time__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Representation_Time__c</fullName>
    <formula>IF(DATETIMEVALUE(Representation_End_Date__c) - Now()&lt;0,0,DATETIMEVALUE(Representation_End_Date__c) - Now())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Representation time remaining in days</inlineHelpText>
    <label>Remaining Representation Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>