unpackaged/main/default/objects/Opportunity/fields/Representation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Representation_End_Date__c</fullName>
    <label>Representation End Date</label>
    <type>Date</type>
</CustomField>