unpackaged/main/default/objects/Opportunity/fields/Requested_Amount_to_be_Financed__c.field-meta.xml
<CustomField>
    <fullName>Requested_Amount_to_be_Financed__c</fullName>
    <label>Requested Amount to be Financed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>