unpackaged/main/default/objects/Opportunity/fields/Resolution_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Coordinator__c</fullName>
    <label>Resolution Coordinator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manny Martinez</fullName>
            </value>
            <value>
                <fullName>John Sanchez</fullName>
            </value>
            <value>
                <fullName>Miguel Coronado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>