unpackaged/main/default/objects/Opportunity/fields/Return_Client__c.field-meta.xml
<CustomField>
    <fullName>Return_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Client</label>
    <type>Checkbox</type>
</CustomField>