unpackaged/main/default/objects/Opportunity/fields/Revenue_Officer_Contact_information__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Officer_Contact_information__c</fullName>
    <inlineHelpText>Contact information as name phone number of the RO on this case</inlineHelpText>
    <label>Revenue Officer Contact information</label>
    <type>TextArea</type>
</CustomField>