unpackaged/main/default/objects/Opportunity/fields/Section_Filled__c.field-meta.xml
<CustomField>
    <fullName>Section_Filled__c</fullName>
    <label>Section Filled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IRS</fullName>
            </value>
            <value>
                <fullName>Billing IRS Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>