unpackaged/main/default/objects/Opportunity/fields/Service_1__c.field-meta.xml
<CustomField>
    <fullName>Service_1__c</fullName>
    <label>Service 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>