unpackaged/main/default/objects/Opportunity/fields/Service_2__c.field-meta.xml
<CustomField>
    <fullName>Service_2__c</fullName>
    <label>Service 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>