unpackaged/main/default/objects/Opportunity/fields/Service_Resolution_Type_1_1__c.field-meta.xml
<CustomField>
    <fullName>Service_Resolution_Type_1_1__c</fullName>
    <label>Service/Resolution Type 1.1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>