unpackaged/main/default/objects/Opportunity/fields/Services_Completed__c.field-meta.xml
<CustomField>
    <fullName>Services_Completed__c</fullName>
    <label>Services Completed</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Completed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>