unpackaged/main/default/objects/Opportunity/fields/Services_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Services_Indicator__c</fullName>
    <formula>IMAGE(
    IF(  HasOpportunityLineItem =false,
        &quot;/img/samples/flag_red.gif&quot;,
        &quot;/s.gif&quot;
    ),
    &quot;Status&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If shown a red flag, means that no services are added to this opportunity.</inlineHelpText>
    <label>Services Indicator</label>
    <type>Text</type>
</CustomField>