unpackaged/main/default/objects/Opportunity/fields/Solution_Type__c.field-meta.xml
<CustomField>
    <fullName>Solution_Type__c</fullName>
    <label>Solution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tax Prep Only</fullName>
            </value>
            <value>
                <fullName>Tax Negotiation Only</fullName>
            </value>
            <value>
                <fullName>Tax Prep and Negotiation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>