unpackaged/main/default/objects/Opportunity/fields/Spouse_is_Homeowner__c.field-meta.xml
<CustomField>
    <fullName>Spouse_is_Homeowner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spouse is Homeowner</label>
    <type>Checkbox</type>
</CustomField>