unpackaged/main/default/objects/Opportunity/fields/Spouse_Owns_Multiple_Properties__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Owns_Multiple_Properties__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spouse Owns Multiple Properties</label>
    <type>Checkbox</type>
</CustomField>