unpackaged/main/default/objects/Opportunity/fields/State_Tax_Return_State_Values__c.field-meta.xml
<CustomField>
    <fullName>State_Tax_Return_State_Values__c</fullName>
    <label>State Tax Return State Values</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>