unpackaged/main/default/objects/Opportunity/fields/State_Tax_Return_Year_Values__c.field-meta.xml
<CustomField>
    <fullName>State_Tax_Return_Year_Values__c</fullName>
    <label>State Tax Return Year Values</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>