unpackaged/main/default/objects/Opportunity/fields/State_Tax_Return_Years_Legacy__c.field-meta.xml
<CustomField>
    <fullName>State_Tax_Return_Years_Legacy__c</fullName>
    <label>State Tax Return Years</label>
    <length>100</length>
    <type>Text</type>
</CustomField>