unpackaged/main/default/objects/Opportunity/fields/Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage__c</fullName>
    <label>Sub-Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Send Agreements</fullName>
            </value>
            <value>
                <fullName>Sent Agreements</fullName>
            </value>
            <value>
                <fullName>New Client Email Submitted</fullName>
            </value>
            <value>
                <fullName>Incorrect Submitted</fullName>
            </value>
            <value>
                <fullName>Info Corrected</fullName>
            </value>
            <value>
                <fullName>TI Resubmitted</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>TI PIF</fullName>
            </value>
            <value>
                <fullName>Send POAs</fullName>
            </value>
            <value>
                <fullName>Sent POAs</fullName>
            </value>
            <value>
                <fullName>Received POAs</fullName>
            </value>
            <value>
                <fullName>Process Payment</fullName>
            </value>
            <value>
                <fullName>Pitched-Nurture</fullName>
            </value>
            <value>
                <fullName>Pitched-Nurture 1T</fullName>
            </value>
            <value>
                <fullName>Pitched Simmer</fullName>
            </value>
            <value>
                <fullName>NSF</fullName>
            </value>
            <value>
                <fullName>2nd Trade CPII</fullName>
            </value>
            <value>
                <fullName>Pitched</fullName>
            </value>
            <value>
                <fullName>Send Agreement</fullName>
            </value>
            <value>
                <fullName>Sent Agreement</fullName>
            </value>
            <value>
                <fullName>Received Agreement</fullName>
            </value>
            <value>
                <fullName>Incorrect Info Submitted</fullName>
            </value>
            <value>
                <fullName>Missing POAs</fullName>
            </value>
            <value>
                <fullName>Sent to Pitbull</fullName>
            </value>
            <value>
                <fullName>Transcript Investigation</fullName>
            </value>
            <value>
                <fullName>TI Completed</fullName>
            </value>
            <value>
                <fullName>Recurring Tax Prep</fullName>
            </value>
            <value>
                <fullName>Attempting Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>