unpackaged/main/default/objects/Opportunity/fields/Target_Monthly_IRS_Payment__c.field-meta.xml
<CustomField>
    <fullName>Target_Monthly_IRS_Payment__c</fullName>
    <defaultValue>0</defaultValue>
    <description>#18451</description>
    <label>Target Monthly IRS Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>