unpackaged/main/default/objects/Opportunity/fields/Tax_Negotiation_Created__c.field-meta.xml
<CustomField>
    <fullName>Tax_Negotiation_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox prevents duplicates for Tax Negotiation Cases</description>
    <label>Tax &amp; Negotiation Case Created?</label>
    <type>Checkbox</type>
</CustomField>