unpackaged/main/default/objects/Opportunity/fields/Tax_Prep_Case_Created__c.field-meta.xml
<CustomField>
    <fullName>Tax_Prep_Case_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to prevent multiple tax prep cases.</description>
    <label>Tax Prep Case Created?</label>
    <type>Checkbox</type>
</CustomField>